2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Call gl_XGETCWD.
	* srclist.txt (xgetcwd): New module.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* srclist.txt (pathmax): Remove dependency on onceonly_2_57.m4.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* srclist.txt (unlocked-io): Remove dependency on onceonly_2_57.m4.

2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add "lib/dirname.h" and "src/parseinfo.h" to project.
	* cvsnt.dep: Regenerated for "cvsnt.dsp" change.
	* cvsnt.mak: Regenerated for "cvsnt.dsp" change.

2004-10-04  Derek Price  <derek@ximbiot.com>

	* TODO: Item 180 is now done (cvs edit should report editors).
	It reports editors as long as it can successfully contact the
	server.  (Part of advisary locks patch originally from Noel Yap
	<yap_noel@yahoo.com>, originally ported forward and enhanced by Matthew
	Ogilvie <mmo9317bd@mailcan.com>.)

2004-10-01  Derek Price  <derek@ximbiot.com>

	* configure.in (getpass): Don't define twice.
	(Report and original patch from Martin Neitzel
	<neitzel@sco.gaertner.de>.)

2004-09-25  Derek Price  <derek@ximbiot.com>

	* configure.in: Use doc/mkman.pl as source for doc/mkman.

2004-09-23  Mark D. Baushke  <mdb@cvshome.org>

	* NEWS: Fix spelling.
	(Reported by Shane Turner <shane.turner@infointeractive.com>.)

2004-09-17  Derek Price  <derek@ximbiot.com>

	* NEWS: Correct file cache note.
	* configure.in (--enable-trust-file-cache): Remove option.

2004-09-16  Derek Price  <derek@ximbiot.com>

	* HACKING: Correct obsolete note about configure not remembering -Wall.

2004-09-14  Derek Price  <derek@ximbiot.com>

	* NEWS: Note potential new Log keyword expansion behaviors.

2004-09-13  Mark D. Baushke  <mdb@cvshome.org>

	* NEWS: Note change to contrib/cvs_acls and addition of
	contrib/cvs_acls.html

2004-09-09  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dep: Regenerated for "cvsnt.dsp" changes made 2004-09-08.