@@ -235,6 +235,7 @@ gl_GETOPT
 gl_GETTIME
 gl_PATHMAX
 gl_REGEX
+gl_SAVE_CWD
 gl_TIME_R
 gl_TIMESPEC
 gl_XALLOC
